--- a/src/BattlemageArena/BattlemageArena.csproj
+++ b/src/BattlemageArena/BattlemageArena.csproj
@@ -75,9 +75,13 @@
     <Compile Include="Core\Entities\Behavior.cs" />
     <Compile Include="Core\Entities\Entity.cs" />
     <Compile Include="Core\GameContent.cs" />
+    <Compile Include="Core\Input\GamepadInput.cs" />
+    <Compile Include="Core\Input\GenericInput.cs" />
+    <Compile Include="Core\Input\KeyboardInput.cs" />
     <Compile Include="Core\Sprites\Animation.cs" />
     <Compile Include="Core\Sprites\Frame.cs" />
     <Compile Include="Core\Sprites\Sprite.cs" />
+    <Compile Include="Game\Behaviors\ControllableBehavior.cs" />
     <Compile Include="Game\Entities\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
