--- a/src/BattlemageArena/BattlemageArena.csproj
+++ b/src/BattlemageArena/BattlemageArena.csproj
@@ -78,11 +78,12 @@
     <Compile Include="Core\Input\GamepadInput.cs" />
     <Compile Include="Core\Input\GenericInput.cs" />
     <Compile Include="Core\Input\KeyboardInput.cs" />
+    <Compile Include="Core\Level\Level.cs" />
     <Compile Include="Core\Sprites\Animation.cs" />
     <Compile Include="Core\Sprites\Frame.cs" />
     <Compile Include="Core\Sprites\Sprite.cs" />
-    <Compile Include="Game\Behaviors\ControllableBehavior.cs" />
-    <Compile Include="Game\Entities\Player.cs" />
+    <Compile Include="GameLogic\Behaviors\ControllableBehavior.cs" />
+    <Compile Include="GameLogic\Entities\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="GameMain.cs" />
