--- a/src/BattlemageArena/BattlemageArena.csproj
+++ b/src/BattlemageArena/BattlemageArena.csproj
@@ -72,7 +72,6 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\Entities\Behavior.cs" />
     <Compile Include="Core\Entities\Entity.cs" />
     <Compile Include="Core\GameContent.cs" />
     <Compile Include="Core\Input\GamepadInput.cs" />
@@ -82,7 +81,7 @@
     <Compile Include="Core\Sprites\Animation.cs" />
     <Compile Include="Core\Sprites\Frame.cs" />
     <Compile Include="Core\Sprites\Sprite.cs" />
-    <Compile Include="GameLogic\Behaviors\ControllableBehavior.cs" />
+    <Compile Include="GameLogic\Entities\Fireball.cs" />
     <Compile Include="GameLogic\Entities\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
