--- a/src/BattlemageArena/BattlemageArena.csproj
+++ b/src/BattlemageArena/BattlemageArena.csproj
@@ -73,6 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\Entities\Entity.cs" />
+    <Compile Include="Core\Extension\Vector2Extension.cs" />
     <Compile Include="Core\GameContent.cs" />
     <Compile Include="Core\Input\GamepadInput.cs" />
     <Compile Include="Core\Input\GenericInput.cs" />
