--- a/src/BattlemageArena/BattlemageArena.csproj
+++ b/src/BattlemageArena/BattlemageArena.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Core\Input\GamepadInput.cs" />
     <Compile Include="Core\Input\GenericInput.cs" />
     <Compile Include="Core\Input\KeyboardInput.cs" />
+    <Compile Include="Core\Input\MultipleInput.cs" />
     <Compile Include="GameLogic\Screens\Level.cs" />
     <Compile Include="Core\Sprites\Animation.cs" />
     <Compile Include="Core\Sprites\Frame.cs" />
@@ -85,6 +86,12 @@
     <Compile Include="GameLogic\Entities\Fireball.cs" />
     <Compile Include="GameLogic\Entities\Player.cs" />
     <Compile Include="GameLogic\Screens\TitleScreen.cs" />
+    <Compile Include="GUI\Components\Base\Component.cs" />
+    <Compile Include="GUI\Components\Button.cs" />
+    <Compile Include="GUI\Components\ComponentList.cs" />
+    <Compile Include="GUI\Components\Label.cs" />
+    <Compile Include="GUI\Components\ScrollingList.cs" />
+    <Compile Include="GUI\Components\SelectionBox.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="GameMain.cs" />
