--- a/src/BattlemageArena/BattlemageArena.csproj
+++ b/src/BattlemageArena/BattlemageArena.csproj
@@ -79,7 +79,9 @@
     <Compile Include="Core\Input\GenericInput.cs" />
     <Compile Include="Core\Input\KeyboardInput.cs" />
     <Compile Include="Core\Input\MultipleInput.cs" />
-    <Compile Include="GameLogic\Screens\Level.cs" />
+    <Compile Include="GameLogic\Net\GameType.cs" />
+    <Compile Include="GameLogic\Screens\ClientLevel.cs" />
+    <Compile Include="GameLogic\Screens\LocalLevel.cs" />
     <Compile Include="Core\Sprites\Animation.cs" />
     <Compile Include="Core\Sprites\Frame.cs" />
     <Compile Include="Core\Sprites\Sprite.cs" />
