WIP: Base for multiplayer.

--- a/src/BattlemageArena/BattlemageArena.csproj
+++ b/src/BattlemageArena/BattlemageArena.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Core\Input\KeyboardInput.cs" />
     <Compile Include="Core\Input\MultipleInput.cs" />
     <Compile Include="GameLogic\Behaviors\ControllableBehavior.cs" />
+    <Compile Include="Core\Entities\NetworkBehavior.cs" />
     <Compile Include="GameLogic\Net\GameState.cs" />
     <Compile Include="GameLogic\Net\NetworkConnection.cs" />
     <Compile Include="GameLogic\Screens\Level.cs" />
