--- a/src/BattlemageArena/BattlemageArena.csproj
+++ b/src/BattlemageArena/BattlemageArena.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Core\Sprites\Sprite.cs" />
     <Compile Include="GameLogic\Entities\Fireball.cs" />
     <Compile Include="GameLogic\Entities\Player.cs" />
+    <Compile Include="GameLogic\Screens\MessageScreen.cs" />
     <Compile Include="GameLogic\Screens\TitleScreen.cs" />
     <Compile Include="GUI\Components\Base\Component.cs" />
     <Compile Include="GUI\Components\Button.cs" />
